Fix patient functions